--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Turtle Island Financing — Transparent Indigenous Auto Financing</title>
-  <meta name="description" content="100% Indigenous-owned, CCAB-certified. We protect your tax exemption and support informed decisions with FPIC. Trauma-informed, OCAP®-trained staff.">
+  <meta name="description" content="Indigenous-owned, CCAB-certified. Transparent financing that honors your rights, protects your tax exemption, offers remote approvals and home delivery. Exclusive partnership with TRC-trained Pioneer Auto.">
   <meta property="og:title" content="Turtle Island Financing — Truth in Financing">
-  <meta property="og:description" content="Keep your tax savings. Choose with confidence. No gimmicks, no pressure — just transparent Indigenous auto financing.">
+  <meta property="og:description" content="Trust and Protection comes from Turtle Island Financing. Exclusive TRC-trained partner (Pioneer Auto), remote approvals, home delivery, and 1,000+ vehicles sold annually.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/hero-joyful-truck.png">
+  <meta property="og:image" content="assets/justine-smoke-hero.jpg">
   <link rel="icon" href="assets/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,13 +23,12 @@
         <img class="logo" src="assets/hero-art.svg" alt="Turtle Island Financing logo" height="40">
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">100% Indigenous-Owned • CCAB Certified</p>
+          <p class="tag">Indigenous-Owned • CCAB Certified</p>
         </div>
       </a>
       <nav class="top-nav">
         <a class="btn link" href="/supports.html">Supports</a>
-        <!-- Removed Verify -->
-        <!-- Removed Dealers -->
+        <!-- Removed Verify and Dealers -->
         <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
@@ -40,23 +39,28 @@
     <div class="container hero-grid">
       <div class="hero-copy">
         <h2>Protect Your Tax Exemption. Protect Your Savings.</h2>
-        <p class="slogan"><strong>Trust and Protection comes through us.</strong> No gimmicks. No pressure. Just transparent financing that honors your rights.</p>
-        <p>Every application flows <strong>through Turtle Island Financing</strong> and is protected by Indigenous standards of respect and transparency (FPIC, OCAP®). We secure financing only through our verified TRC-trained partner network — starting with <strong>Pioneer Auto in Maple Ridge</strong>, the first dealership to complete our Turtle Island TRC Standards onboarding.</p>
+        <p class="slogan"><strong>Trust and Protection comes from Turtle Island Financing.</strong> No gimmicks. No pressure. Just transparent financing that honors your rights.</p>
+        <p>
+          Turtle Island Financing operates together with our <strong>exclusive dealership partner, Pioneer Auto (Maple Ridge)</strong> — TRC-trained and certified under our <strong>BAG Indigenous Knowledge &amp; History</strong> program. As one team, we offer one of the Lower Mainland’s largest inventories, a full service &amp; parts department, and a track record of <strong>1,000+ vehicle sales every year</strong>.
+          <br><br>
+          Prefer to shop from home? We can complete your deal <strong>remotely</strong> and <strong>deliver your vehicle</strong> to you for a comfortable, stress-free experience.
+        </p>
         <div class="hero-ctas">
-          <!-- One primary action -->
           <a class="btn" href="#apply">Protect My Savings → Check If I Qualify</a>
         </div>
         <ul class="pill-list">
           <li>CCAB Certified</li>
-          <li>Trauma-informed & OCAP®-trained</li>
-          <li>Approved TRC-trained partner network</li>
+          <li>Trauma-informed &amp; OCAP®-trained</li>
+          <li>Exclusive TRC-trained dealership partner</li>
           <li>Respectful tax-exemption handling</li>
+          <li>Remote approvals &amp; home delivery</li>
         </ul>
       </div>
       <figure class="hero-art">
-        <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+        <!-- Upload your chosen image as this filename or update the path -->
+        <img src="assets/justine-smoke-hero.jpg" alt="Justine Smoke — Client Care Director at Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
         <figcaption class="hero-caption">
-          Photo for illustration — real smiles from our clients coming soon 🙌
+          Meet <strong>Justine Smoke</strong>, Client Care Director — trauma-informed, OCAP® certified, 15 years serving Indigenous communities.
         </figcaption>
       </figure>
     </div>
@@ -66,7 +70,7 @@
   <section id="truth" class="truth-in-financing">
     <div class="container">
       <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
-      <p class="muted">How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
+      <p class="muted">How some unaffiliated dealers inflate your loan vs. how we protect your savings and rights.</p>
       <table class="comparison">
         <thead>
           <tr><th>Line Item</th><th>Unaffiliated Dealer</th><th>Turtle Island Financing</th></tr>
@@ -88,21 +92,22 @@
     </div>
   </section>
 
-  <!-- Trust -->
+  <!-- Why Choose / Trust -->
   <section class="why-choose">
     <div class="container">
-      <h3>Why Trust Turtle Island Financing?</h3>
+      <h3>Why Choose Turtle Island Financing?</h3>
       <ul class="checklist">
-        <li>✅ 100% Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
-        <li>✅ Trauma-informed & <strong>OCAP®-trained</strong> staff safeguard your data</li>
-        <li>✅ 20+ years serving Indigenous communities with dignity</li>
-        <li>✅ Financing secured <strong>through Turtle Island Financing</strong> with our approved TRC-trained partner network</li>
-        <li>✅ <strong>Pioneer Auto (Maple Ridge)</strong> — our first verified partner, committed to Turtle Island’s TRC Standards</li>
+        <li>✅ Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma-informed &amp; <strong>OCAP®-trained</strong> staff safeguard your data</li>
+        <li>✅ Exclusive partnership with <strong>Pioneer Auto (Maple Ridge)</strong> — TRC-trained and certified under Turtle Island’s BAG Indigenous Knowledge &amp; History program</li>
+        <li>✅ One of the Lower Mainland’s largest used vehicle inventories (cars, trucks, SUVs, vans)</li>
+        <li>✅ Full service &amp; parts centre (OK Tire)</li>
+        <li>✅ <strong>1,000+ vehicles sold annually</strong> — proven dealership experience</li>
+        <li>✅ Remote approvals and home delivery options</li>
       </ul>
 
-      <!-- Tiny testimonial block -->
       <blockquote class="testimonial" style="margin-top:1rem">
-        “I felt safe applying here because I knew my tax exemption wouldn’t be hidden in the numbers. Turtle Island handled everything with respect and connected me with a trusted partner.”
+        “I felt safe applying here because I knew my tax exemption wouldn’t be hidden in the numbers. Turtle Island handled everything with respect and connected me with the right vehicle.”
         <br><span class="muted small">— Community Member</span>
       </blockquote>
     </div>
@@ -113,7 +118,10 @@
     <div class="container grid">
       <div class="form-card">
         <h3>Quick Pre-Approval</h3>
-        <p class="muted"><strong>OCAP® Protected:</strong> Your application is safeguarded under Ownership, Control, Access, and Possession. <strong>Trust and Protection comes through Turtle Island Financing</strong> — we share your details only with our verified partner network to secure financing. Our first TRC-trained partner is <strong>Pioneer Auto in Maple Ridge</strong>, who has agreed to follow our cultural standards in every deal.</p>
+        <p class="muted">
+          <strong>OCAP® Protected:</strong> Your application is safeguarded under Ownership, Control, Access, and Possession.
+          <strong>Trust and Protection comes from Turtle Island Financing.</strong> Our team can complete your deal remotely and arrange home delivery.
+        </p>
 
         <form name="preapproval" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
           <input type="hidden" name="form-name" value="preapproval">
@@ -184,12 +192,12 @@
             <input type="hidden" name="province">
 
             <!-- Notes -->
-            <label>Notes (optional) <textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on-reserve delivery, budget, timeline…"></textarea></label>
+            <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., remote purchase and delivery to [community], budget, timeline…"></textarea></label>
 
             <!-- Consent -->
             <label class="consent">
               <input type="checkbox" name="consent">
-              I consent to my application being shared with Turtle Island Financing’s verified partner network for the purpose of securing financing. I understand a licensed lender may perform a credit check. I agree to receive communications related to my application.
+              I agree to receive communications related to my application and understand a licensed lender may perform a credit check.
             </label>
 
             <div class="row" style="gap:.75rem">
@@ -200,19 +208,32 @@
         </form>
       </div>
 
+      <!-- Right Column: Trust & Contact -->
       <aside class="trust">
-        <h4>Trust &amp; Certification</h4>
-        <div class="ccab-badge">
+        <h4>Your Direct Contact</h4>
+        <div class="card" style="display:flex;gap:12px;align-items:center">
+          <img src="assets/justine-smoke-hero.jpg" alt="Portrait of Justine Smoke" width="80" height="80" style="border-radius:999px;object-fit:cover">
+          <div>
+            <strong>Justine Smoke</strong><br>
+            <span class="muted small">Client Care Director — trauma-informed, OCAP® certified, 15 years serving Indigenous communities</span>
+          </div>
+        </div>
+
+        <h4 style="margin-top:16px">Turtle Island Financing + Pioneer Auto</h4>
+        <p>Together as one team under our TRC Standards, we offer:</p>
+        <ul class="bullets">
+          <li>Large, diverse stock of cars, trucks, SUVs, and vans</li>
+          <li>Transparent financing that protects your tax exemption</li>
+          <li>Full service &amp; parts department, including OK Tire</li>
+          <li><strong>1,000+ vehicles sold annually</strong> — experience you can trust</li>
+          <li>Remote approvals &amp; delivery anywhere — buy from the comfort of your home</li>
+        </ul>
+        <div class="ccab-badge" style="margin-top:12px">
           <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
-        <ul class="bullets">
-          <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
-          <li>100% Indigenous-owned and operated</li>
-          <li>OCAP®-aligned, trauma-informed trained staff</li>
-        </ul>
-        <div class="disclaimer">
-          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing secures financing exclusively through its Indigenous-aligned partner network. Approvals, rates, and terms are provided by licensed lenders. <strong>Pioneer Auto (Maple Ridge)</strong> is our first verified partner dealership, operating under Turtle Island’s TRC Standards.</p>
+        <div class="disclaimer" style="margin-top:8px">
+          <p class="muted small"><strong>Disclaimer:</strong> Approvals, rates, and terms are provided by licensed lenders. Pioneer Auto (Maple Ridge) operates under Turtle Island’s TRC Standards and has completed our BAG Indigenous Knowledge &amp; History training.</p>
         </div>
       </aside>
     </div>
@@ -223,19 +244,18 @@
     <div class="container foot">
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
       <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
-      <em>Trust and Protection comes through us — Turtle Island Financing.</em></p>
+      <em>Trust and Protection comes from Turtle Island Financing.</em></p>
       <nav>
         <a href="#apply">Apply</a>
         <a href="/supports.html">Supports</a>
-        <!-- Removed Verify -->
-        <!-- Removed Dealers -->
+        <!-- Removed Verify and Dealers -->
         <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
-        <a href="#" onclick="window.alert('Privacy: We share your info only with our verified partner network to secure financing.'); return false;">Privacy</a>
+        <a href="#" onclick="window.alert('Privacy: Your information is safeguarded and used only for arranging financing.'); return false;">Privacy</a>
       </nav>
     </div>
   </footer>
 
-  <!-- Minimal inline JS to power the two-step form and keep it Netlify-friendly -->
+  <!-- Minimal inline JS to power the two-step form -->
   <script>
     (function(){
       const step1 = document.getElementById('step1');
@@ -246,7 +266,7 @@
       const req = (el, on) => { if(!el) return; on ? el.setAttribute('required','') : el.removeAttribute('required'); };
 
       function goStep2(){
-        // copy province from step1 select into hidden canonical "province" field
+        // copy province from step1 into canonical hidden field
         const p1 = document.querySelector('[name="province_step1"]');
         const p2 = document.querySelector('[name="province"]');
         if(p1 && p2) p2.value = p1.value;
@@ -269,11 +289,11 @@
         step2.style.display = 'none';
         step1.style.display = '';
       }
-      if(toStep2) toStep2.addEventListener('click', goStep2);
-      if(back) back.addEventListener('click', goStep1);
 
-      // keep year current
-      const y = document.getElementById('year'); if(y) y.textContent = new Date().getFullYear();
+      if (toStep2) toStep2.addEventListener('click', goStep2);
+      if (back) back.addEventListener('click', goStep1);
+
+      const y = document.getElementById('year'); if (y) y.textContent = new Date().getFullYear();
     })();
   </script>
 
