--- a/index.html
+++ b/index.html
@@ -113,93 +113,101 @@
     </div>
   </section>
 
-  <!-- Featured Vehicles -->
+  <!-- Featured Vehicles (live units & 'Your Price') -->
   <section class="inventory">
     <div class="container">
       <h3>Featured Vehicles</h3>
-      <p class="muted">A small sample from our exclusive dealership partner’s lot. Availability changes daily — we’ll match you to the right vehicle and protect your tax exemption.</p>
+      <p class="muted">Hand-picked examples from our partner lot. We’ll confirm today’s availability and protect your tax exemption.</p>
 
       <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px">
-        <!-- Card 1 -->
+        <!-- C-HR -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/rav4.jpg" alt="2019 Toyota RAV4 LE AWD — white" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2020-toyota-chr-le.jpg" alt="2020 Toyota C-HR LE FWD — grey" loading="lazy" decoding="async">
           </picture>
-          <h4>2019 Toyota RAV4 LE AWD</h4>
-          <p class="muted small">Comfortable, efficient SUV • Great for winter roads</p>
+          <h4>2020 Toyota C-HR LE FWD</h4>
+          <p class="muted small">9,753 km • Grey • I4 • Auto</p>
           <ul class="pill-list">
-            <li>Example ~$26.9k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $27,488</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2019 Toyota RAV4 LE AWD">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2020 Toyota C-HR LE FWD ($27,488)">Check availability</button>
         </article>
 
-        <!-- Card 2 -->
+        <!-- Grand Caravan -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/f150.jpg" alt="2018 Ford F-150 XLT 4x4 — blue" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2021-chrysler-grand-caravan-sxt.jpg" alt="2021 Chrysler Grand Caravan SXT — white" loading="lazy" decoding="async">
           </picture>
-          <h4>2018 Ford F-150 XLT 4x4</h4>
-          <p class="muted small">Work-ready pickup • Towing & hauling</p>
+          <h4>2021 Chrysler Grand Caravan SXT</h4>
+          <p class="muted small">2WD • Family space • Budget-friendly</p>
           <ul class="pill-list">
-            <li>Example ~$29.8k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $33,888</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2018 Ford F-150 XLT 4x4">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2021 Chrysler Grand Caravan SXT ($33,888)">Check availability</button>
         </article>
 
-        <!-- Card 3 -->
+        <!-- CR-V -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/crv.jpg" alt="2020 Honda CR-V EX — silver" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2022-honda-crv-lx-awd.jpg" alt="2022 Honda CR-V LX AWD — silver" loading="lazy" decoding="async">
           </picture>
-          <h4>2020 Honda CR-V EX</h4>
-          <p class="muted small">Reliable family SUV • Excellent safety</p>
+          <h4>2022 Honda CR-V LX AWD</h4>
+          <p class="muted small">31,336 km • Silver • AWD</p>
           <ul class="pill-list">
-            <li>Example ~$28.5k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $36,888</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2020 Honda CR-V EX">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2022 Honda CR-V LX AWD ($36,888)">Check availability</button>
         </article>
 
-        <!-- Card 4 -->
+        <!-- Eclipse Cross -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/silverado.jpg" alt="2017 Chevrolet Silverado 1500 LT — red" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2023-mitsubishi-eclipse-cross-se.jpg" alt="2023 Mitsubishi Eclipse Cross SE S-AWC — silver" loading="lazy" decoding="async">
           </picture>
-          <h4>2017 Chevrolet Silverado 1500 LT</h4>
-          <p class="muted small">Trusted V8 power • Crew cab comfort</p>
+          <h4>2023 Mitsubishi Eclipse Cross SE S-AWC</h4>
+          <p class="muted small">31,333 km • Silver • S-AWC</p>
           <ul class="pill-list">
-            <li>Example ~$27.4k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $36,988</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2017 Chevrolet Silverado 1500 LT">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2023 Mitsubishi Eclipse Cross SE S-AWC ($36,988)">Check availability</button>
         </article>
 
-        <!-- Card 5 -->
+        <!-- Explorer -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/tucson.jpg" alt="2021 Hyundai Tucson Preferred — grey" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2022-ford-explorer-st-line-4wd.jpg" alt="2022 Ford Explorer ST-Line 4WD — white" loading="lazy" decoding="async">
           </picture>
-          <h4>2021 Hyundai Tucson Preferred</h4>
-          <p class="muted small">Modern tech • Great value</p>
+          <h4>2022 Ford Explorer ST-Line 4WD</h4>
+          <p class="muted small">Sport styling • 3-row family SUV</p>
           <ul class="pill-list">
-            <li>Example ~$25.9k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $43,888</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2021 Hyundai Tucson Preferred">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2022 Ford Explorer ST-Line 4WD ($43,888)">Check availability</button>
         </article>
 
-        <!-- Card 6 -->
+        <!-- F-150 -->
         <article class="card vehicle">
           <picture>
-            <img src="assets/vehicles/grand-caravan.jpg" alt="2019 Dodge Grand Caravan SXT — black" loading="lazy" decoding="async">
+            <img src="assets/vehicles/2019-ford-f150.jpg" alt="2019 Ford F-150 — example unit" loading="lazy" decoding="async">
           </picture>
-          <h4>2019 Dodge Grand Caravan SXT</h4>
-          <p class="muted small">7-passenger space • Budget-friendly</p>
+          <h4>2019 Ford F-150</h4>
+          <p class="muted small">Work & play • Aluminum body</p>
           <ul class="pill-list">
-            <li>Example ~$18.9k</li><li>Tax-exempt eligible</li><li>Remote delivery</li>
+            <li><strong>Your Price: $27,888</strong></li>
+            <li>Tax-exempt eligible</li><li>Remote delivery</li>
           </ul>
-          <button class="btn small check-availability" data-vehicle="2019 Dodge Grand Caravan SXT">Check availability</button>
+          <button class="btn small check-availability" data-vehicle="2019 Ford F-150 ($27,888)">Check availability</button>
         </article>
       </div>
 
-      <p class="muted small" style="margin-top:.75rem">*Vehicle photos & pricing for illustration. Availability & terms change daily and are confirmed during pre-approval (OAC).</p>
+      <p class="muted small" style="margin-top:.75rem">
+        *“Your Price” and availability are updated frequently and confirmed during pre-approval (OAC). Additional standard fees may apply (doc & finance). Photos are representative; ask us for the exact unit photos.
+      </p>
 
       <div class="cta-center" style="margin-top:1rem">
         <a class="btn" href="#apply">See More Options → Check If I Qualify</a>
@@ -287,7 +295,7 @@
             <input type="hidden" name="province">
 
             <!-- Notes -->
-            <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., interested in: [auto], remote purchase and delivery to [community], budget, timeline…"></textarea></label>
+            <label>Notes (optional) <textarea name="notes" rows="3" placeholder="E.g., interested in: [auto], remote purchase and delivery to [community], budget, timeline…"></textarea></label>
 
             <!-- Consent -->
             <label class="consent">
